# aquamarine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
demo/: Cargo.toml  diagram.mermaid  diagram_0.mmd  diagram_1.mmd  diagram_2.mmd
demo/src/: lib.rs
example_crate/: Cargo.toml
example_crate/src/: lib.rs
scripts/: package_mermaid_release.sh
src/: attrs.rs  lib.rs  parse.rs
test_crate/: COPYRIGHT  Cargo.toml
test_crate/data/: example.mdd
test_crate/src/: lib.rs
