[package]
name = "aquamarine"
version = "0.0.0"
authors = ["Mike Lubinets <git@mkl.dev>"]
description = "A mermaid generator proc-macro for rustdoc"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
itertools = "0.9"

[dependencies.syn]
version = "1"
features = ["full"]

