[package]
name = "aquamarine"
version = "0.5.0"
authors = ["Mike Lubinets <git@mkl.dev>", "Frank Rehberger <frehberg@gmail.com>"]
description = "A mermaid.js integration for rustdoc"
keywords = ["proc_macro", "docs", "rustdoc", "mermaid", "diagram"]
categories = ["visualization", "development-tools::build-utils"]
repository = "https://github.com/mersinvald/aquamarine"
edition = "2018"
license = "MIT"
include = [ "src/**/*", "Cargo.toml", "doc/js/**" ]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
itertools = "0.10"
syn = "2"
include_dir = "0.7"
[dev-dependencies]
pretty_assertions = "1"
