[package]
name = "aquamarine-demo-crate"
version = "0.3.0"
authors = ["Mike Lubinets <git@mkl.dev>"]
description = "A demo crate for aquamarine -- the mermaid.js integration for rustdoc"
keywords = ["proc_macro", "docs", "rustdoc", "mermaid", "diagram"]
repository = "https://github.com/mersinvald/aquamarine"
edition = "2018"
license = "MIT"

[dependencies.aquamarine]
version = "0.3.0"
path = "../"
